2012-12-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* include/cygwin/wait.h (WAIT_ANY): Define.
	(WAIT_MYPGRP): Define.

2012-12-05  Corinna Vinschen  <corinna@vinschen.de>

	* child_info.h (class child_info_spawn): Drop unused member lock.
	(CURR_CHILD_INFO_MAGIC): Update.
	* sigproc.cc (child_info_spawn::child_info_spawn): Drop setting lock.

2012-12-04  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* cygtls.h (_cygtls::will_wait_for_signal): Rename from
	'signal_waiting' to something more expressive.  Reflect rename
	throughout.
	(_cygtls::get_signal_arrived): Rename from create_signal_arrived.  Move
	lock here.
	(_cygtls::set_signal_arrived): Use get_signal_arrived.
	* exceptions.cc (_cygtls::interrupt_setup): Use get_signal_arrived.
	* tlsoffsets.h: Regenerate.

2012-11-30  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* spawn.cc (child_info_spawn::worker): Make detection of '/c' case
	insensitive when looking for cmd.exe command line.

2012-11-26  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* configure.ac: Rename from configure.in.
	* configure.in: Delete.
	* configure: Regenerate.

2012-11-26  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_registry.cc: Drop Mingw.org considerations.
	* fhandler_serial.cc: Ditto.
	* fhandler_socket.cc: Ditto.
	* fhandler_tape.cc: Ditto.
	* fhandler_tty.cc: Ditto.
	* net.cc: Ditto.
	* ntdll.h: Ditto.
	* sched.cc: Ditto.
	* sec_helper.cc: Ditto.

2012-11-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* configure.in: Remove unneeded ALLOC substitution.
	* configure: Regenerate.
	* aclocal.m4: Ditto.

2012-11-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* configure.in: Add previously-missed AC_NO_EXECUTABLES.
	* configure: Regenerate.
	* aclocal.m4: Ditto.

2012-11-23  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* Makefile.in: Use explicit path to mkdir.

2012-11-22  Christopher Faylor  <me.cygwin2012@cgf.cx>

	* select.cc (select): Don't return -1 when we've timed out after
	looping.
