@@ -1,3 +1,11 @@
+2012-12-07  Christopher Faylor  <me.cygwin2012@cgf.cx>
+
+	* cygtls.h (_cygtls::get_signal_arrived): Add parameter to make
+	lock/unlock conditional.
+	* exceptions.cc (_cygtls::interrupt_setup): Don't get a lock when
+	setting signal_arrived since we already have one.
+	* gendef: Add some comments to make it easier to find functions.
+
 2012-12-06  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>
 
 	* include/cygwin/wait.h (WAIT_ANY): Define.
